--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <!-- Header/Home -->
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
     <h1 class="w3-jumbo"><span class="w3-hide-small"></span> Sumit Chauhan Portfolio</h1>
-    <p>Data analyst enthuast</p>
+    <p>Data analyst enthusiast</p>
     <img src="photos\1.jpg" alt="boy" class="w3-image" width="500" height="500">
   </header>
 
@@ -65,7 +65,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
     <h2 class="w3-text-light-grey">Sumit Chauhan</h2>
     <hr style="width:200px" class="w3-opacity">
-    <p>I am a data analyst enthuast with experience in transforming data into insights and solutions. I have expertise in using Excel, SQL, Python, and Power BI to analyze, visualize, and communicate data. I am passionate about finding new ways to leverage data to solve complex problems and create value. I am currently looking for new opportunities to apply my data analytics skills in the industry
+    <p>I am a data analyst enthusiast with experience in transforming data into insights and solutions. I have expertise in using Excel, SQL, Python, and Power BI to analyze, visualize, and communicate data. I am passionate about finding new ways to leverage data to solve complex problems and create value. I am currently looking for new opportunities to apply my data analytics skills in the industry.
     </p>
     <h3 class="w3-padding-16 w3-text-light-grey">My Skills</h3>
     <p class="w3-wide">Power BI:DAX, API, Power Query</p>
