--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <!-- Testimonials -->
     <h3 class="w3-padding-24 w3-text-light-grey">WORK EXPERIENCE 
     </h3> 
-    <h5 class="w3-padding-24 w3-text-light-grey">Ajath infotech Pvt Ltd    &nbsp &nbsp  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspJuly 2023 - Feb 2024   
+    <h5 class="w3-padding-24 w3-text-light-grey">Ajath infotech Pvt Ltd       
     </h5>
     <h5 class="w3-padding-24 w3-text-light-grey">PROJECT TRAINEE </h5>
     <!-- <img src="/w3images/bandmember.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px"> -->
@@ -188,6 +188,21 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   methodologies for artifact creation and user story preparation. 
 • Developed Python AI/ML models for speech-to-text and text-to-image conversion, enhancing technological 
   capabilities</span></pre>
+
+<h5 class="w3-padding-24 w3-text-light-grey">Aakriti Intelligence                                                                                                                           
+    </h5>
+    <h5 class="w3-padding-24 w3-text-light-grey">Data Analyst trainee  </h5>
+    <!-- <img src="/w3images/bandmember.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px"> -->
+    <pre><span class="w3-large w3-margin-right">
+•Proficient in crafting and delivering client proposals, understanding needs, and proposing effective solutions. 
+• Possess strong proficiency in SQL querying, data analysis using SQL, Python,Excel, and data visualization using Power BI, Python
+• Utilized critical thinking skills to identify and solve analytical challenges, ensuring the accuracy and reliability of  data insights. 
+• Analyzed data using various methods to uncover hidden patterns and formulate data-driven recommendations to optimize game performance.
+• Worked with relational databases, including SQL queries, database definition, and schema design. 
+• Developed and implemented data quality control measures to guarantee the validity of analytical results. 
+• Maintained meticulous attention to detail throughout the data analysis process, ensuring data accuracy and integrity.
+• working directly with business teams to utilize metrics and analysis to determine improvement opportunities
+s</span></pre>
     <!-- <p>John Doe saved us from a web disaster.</p><br> -->
 <!--     
     <img src="/w3images/avatar_g2.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px">
