--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 
     <p class="actions special">
         <li><button class="w3-button w3-light-grey w3-padding-large w3-section">
-            <a href="https://drive.google.com/file/d/19sLgm2dM2anhvLJ6z6SM1pgEsuJyjvB1/view?usp=sharing" class="button" target="_blank" >View or Download Resume</a></button></li>
+            <a href="https://drive.google.com/file/d/1_a2zckahOQ9Jj5YBeYJIlq1oAnU2HEjf/view?usp=sharing" class="button" target="_blank" >View or Download Resume</a></button></li>
 
         </p>
     <!-- Grid for pricing tables -->
@@ -172,7 +172,23 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     
     <!-- Testimonials -->
     <h3 class="w3-padding-24 w3-text-light-grey">WORK EXPERIENCE 
-    </h3> 
+    </h3>
+    <h5 class="w3-padding-24 w3-text-light-grey">Disney+ Hotstar      
+    </h5>
+    <h5 class="w3-padding-24 w3-text-light-grey">Brand Lift Coordinator </h5>
+    <!-- <img src="/w3images/bandmember.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px"> -->
+    <pre><span class="w3-large w3-margin-right">
+• Mounting Brand Lift Studies: Coordinate and execute brand lift studies, measuring the impact of marketing campaigns on 
+  consumer behavior and brand perception. Collaborate with internal teams and external partners to implement effective 
+  research methodologies 
+• Smooth Execution: Ensure seamless execution of brand lift studies, managing timelines, coordinating with stakeholders, 
+  and addressing any technical or operational issues
+• Report Generation: Analyzed data from brand lift studies, generating comprehensive reports. Present findings and 
+  recommendations to key stakeholders 
+• End-to-End Delivery: Took ownership of the entire brand lift study process, from concept to final deliverables. Meet project 
+  milestones and deliver high- quality results, insights and actions worked on fortune 500 clients. 
+• Additional Responsibilities: Contributed to other research projects and initiatives as assigned 
+s</span></pre>
     <h5 class="w3-padding-24 w3-text-light-grey">Ajath infotech Pvt Ltd       
     </h5>
     <h5 class="w3-padding-24 w3-text-light-grey">PROJECT TRAINEE </h5>
