--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 • End-to-End Delivery: Took ownership of the entire brand lift study process, from concept to final deliverables. Meet project 
   milestones and deliver high- quality results, insights and actions worked on fortune 500 clients. 
 • Additional Responsibilities: Contributed to other research projects and initiatives as assigned 
-s</span></pre>
+</span></pre>
     <h5 class="w3-padding-24 w3-text-light-grey">Ajath infotech Pvt Ltd       
     </h5>
     <h5 class="w3-padding-24 w3-text-light-grey">PROJECT TRAINEE </h5>
@@ -218,7 +218,7 @@ s</span></pre>
 • Developed and implemented data quality control measures to guarantee the validity of analytical results. 
 • Maintained meticulous attention to detail throughout the data analysis process, ensuring data accuracy and integrity.
 • working directly with business teams to utilize metrics and analysis to determine improvement opportunities
-s</span></pre>
+</span></pre>
     <!-- <p>John Doe saved us from a web disaster.</p><br> -->
 <!--     
     <img src="/w3images/avatar_g2.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px">
