--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 
     <p class="actions special">
         <li><button class="w3-button w3-light-grey w3-padding-large w3-section">
-            <a href="https://drive.google.com/file/d/1_a2zckahOQ9Jj5YBeYJIlq1oAnU2HEjf/view?usp=sharing" class="button" target="_blank" >View or Download Resume</a></button></li>
+            <a href="https://drive.google.com/file/d/1mrD6FLS3fcNw2sIbKqA4Tgw4wgeVB33K/view?usp=sharing" class="button" target="_blank" >View or Download Resume</a></button></li>
 
         </p>
     <!-- Grid for pricing tables -->
@@ -178,46 +178,45 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <h5 class="w3-padding-24 w3-text-light-grey">Brand Lift Coordinator </h5>
     <!-- <img src="/w3images/bandmember.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px"> -->
     <pre><span class="w3-large w3-margin-right">
-• Mounting Brand Lift Studies: Coordinate and execute brand lift studies, measuring the impact of marketing campaigns on 
-  consumer behavior and brand perception. Collaborate with internal teams and external partners to implement effective 
-  research methodologies 
-• Smooth Execution: Ensure seamless execution of brand lift studies, managing timelines, coordinating with stakeholders, 
-  and addressing any technical or operational issues
-• Report Generation: Analyzed data from brand lift studies, generating comprehensive reports. Present findings and 
-  recommendations to key stakeholders 
-• End-to-End Delivery: Took ownership of the entire brand lift study process, from concept to final deliverables. Meet project 
-  milestones and deliver high- quality results, insights and actions worked on fortune 500 clients. 
-• Additional Responsibilities: Contributed to other research projects and initiatives as assigned 
+• Conducted meta-analyses on the effectiveness of NCCS and ICC T20 World Cup 2024 Campaign Impact, aligning with 
+objectives to understand campaign success rates. Leveraged learnings for client discussions and media coverage. 
+• Performed viewership analysis for marquee shows like "Koffee with Karan" and "Aarya", providing critical insights into 
+audience engagement and preferences. 
+• Contributed insights from meta-analyses and other research initiatives to inform strategic decisions and enhance 
+organizational effectiveness. 
+• Led coordination and execution of brand lift studies, evaluating marketing campaign impacts on consumer behavior and 
+brand perception. 
+• Led the automation of the BLS framework in collaboration with the AdTech, Product, and Operations teams, significantly 
+cutting down manual labor from 4 hours per study to just 45 minutes– saving 1 FTE. 
+• Ensured seamless execution of brand lift studies by managing timelines, coordinating stakeholders, and resolving technical 
+or operational challenges. 
+• Analyzed data from brand lift studies to produce comprehensive reports and presented findings and recommendations to 
+stakeholders. 
+• Collaborated cross-functionally with internal teams and external partners to deploy robust research methodologies.
 </span></pre>
     <h5 class="w3-padding-24 w3-text-light-grey">Ajath infotech Pvt Ltd       
     </h5>
     <h5 class="w3-padding-24 w3-text-light-grey">PROJECT TRAINEE </h5>
     <!-- <img src="/w3images/bandmember.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px"> -->
     <pre><span class="w3-large w3-margin-right">
-• Analyze data using Excel and Power BI to pinpoint anomalies, share insights, and perform custom analysis. 
-• Managed end-to-end projects with Jira, Basecamp, Project Libre, and Power BI, optimizing resource allocation. 
-• Conducted exploratory data analysis with Python and Pandas, extracting key insights to drive business decisions. 
-• Produced weekly process reports for clients, focusing on various aspects of requirements such as development 
-  reports. 
-• Proficient in crafting and delivering client proposals, understanding needs, and proposing effective solutions. 
-• Contributed to business analysis efforts, utilizing Epic Requirements, Stakeholder Collaboration, and various 
-  methodologies for artifact creation and user story preparation. 
-• Developed Python AI/ML models for speech-to-text and text-to-image conversion, enhancing technological 
-  capabilities</span></pre>
+• Analysed data using Excel, Power BI, and Python to identify anomalies and share insights. 
+• Developed and delivered small/medium-scale technology solutions aligned with business requirements. 
+• Utilized SQL, Python, and Power BI for data analysis and visualization. 
+• Crafted and delivered client proposals, proposing effective solutions. 
+• Collaborated with clients and internal project teams to drive project success. </span></pre>
 
 <h5 class="w3-padding-24 w3-text-light-grey">Aakriti Intelligence                                                                                                                           
     </h5>
     <h5 class="w3-padding-24 w3-text-light-grey">Data Analyst trainee  </h5>
     <!-- <img src="/w3images/bandmember.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px"> -->
     <pre><span class="w3-large w3-margin-right">
-•Proficient in crafting and delivering client proposals, understanding needs, and proposing effective solutions. 
-• Possess strong proficiency in SQL querying, data analysis using SQL, Python,Excel, and data visualization using Power BI, Python
-• Utilized critical thinking skills to identify and solve analytical challenges, ensuring the accuracy and reliability of  data insights. 
-• Analyzed data using various methods to uncover hidden patterns and formulate data-driven recommendations to optimize game performance.
+• Crafted and delivered client proposals, proposing effective solutions. 
+• Reviewed, analyzed, and provided feedback on projects. 
+• Created test plans, test schedules, and test strategies. 
+• Utilized various methods to analyze data, uncover hidden patterns, and optimize game performance. 
 • Worked with relational databases, including SQL queries, database definition, and schema design. 
-• Developed and implemented data quality control measures to guarantee the validity of analytical results. 
-• Maintained meticulous attention to detail throughout the data analysis process, ensuring data accuracy and integrity.
-• working directly with business teams to utilize metrics and analysis to determine improvement opportunities
+• Developed and implemented data quality control measures to ensure analytical validity. 
+• Established and built relationships to facilitate project success throughout the lifecycle. 
 </span></pre>
     <!-- <p>John Doe saved us from a web disaster.</p><br> -->
 <!--     
