--- a/index.html
+++ b/index.html
@@ -65,8 +65,17 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
     <h2 class="w3-text-light-grey">Sumit Chauhan</h2>
     <hr style="width:200px" class="w3-opacity">
-    <p>I am a data analyst enthusiast with experience in transforming data into insights and solutions. I have expertise in using Excel, SQL, Python, and Power BI to analyze, visualize, and communicate data. I am passionate about finding new ways to leverage data to solve complex problems and create value. I am currently looking for new opportunities to apply my data analytics skills in the industry.
-    </p>
+    <pre> With 2+ years of experience in data analytics, market research, and brand strategy, I specialize in transforming raw data into actionable insights that drive business growth. Currently at Disney+ Hotstar, I analyze brand lift studies, advertising effectiveness, and audience behavior for top-tier brands like Google, Amazon, and FMCG leaders.
+
+My expertise lies in:
+📊 Market Research & Campaign Analysis – Conducting in-depth studies to evaluate ad impact and optimize marketing strategies.
+📈 Data Analytics & Visualization – Utilizing Python, SQL, Excel, and Power BI to extract insights and automate workflows.
+⚙️ Automation & Process Optimization – Spearheaded automation projects, reducing manual effort from 4 hours to 45 minutes, enhancing efficiency.
+🤝 Cross-functional Collaboration – Working with AdTech, Product, and Research teams to deliver data-driven solutions.
+enhancing data-driven decision-making through SQL analytics, dashboarding, and statistical research across FMCG, Gaming, and Tech industries.
+
+I am passionate about leveraging data to tell compelling stories, optimize business strategies, and drive brand growth through data-backed decision-making.
+   </pre>
     <h3 class="w3-padding-16 w3-text-light-grey">My Skills</h3>
     <p class="w3-wide">Power BI:DAX, API, Power Query</p>
     <div class="w3-white">
