--- a/index.html
+++ b/index.html
@@ -65,14 +65,19 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
     <h2 class="w3-text-light-grey">Sumit Chauhan</h2>
     <hr style="width:200px" class="w3-opacity">
-    <pre> With 2+ years of experience in data analytics, market research, and brand strategy, I specialize in transforming raw data into actionable insights that drive business growth. Currently at Disney+ Hotstar, I analyze brand lift studies, advertising effectiveness, and audience behavior for top-tier brands like Google, Amazon, and FMCG leaders.
+    <pre> With 2+ years of experience in data analytics, market research, and brand strategy, I specialize in 
+          transforming raw data into actionable insights that drive business growth. Currently at Disney+ Hotstar, 
+          I analyze brand lift studies, advertising effectiveness, and audience behavior for top-tier brands like Google, 
+          Amazon, and FMCG leaders.
 
 My expertise lies in:
 📊 Market Research & Campaign Analysis – Conducting in-depth studies to evaluate ad impact and optimize marketing strategies.
 📈 Data Analytics & Visualization – Utilizing Python, SQL, Excel, and Power BI to extract insights and automate workflows.
-⚙️ Automation & Process Optimization – Spearheaded automation projects, reducing manual effort from 4 hours to 45 minutes, enhancing efficiency.
+⚙️ Automation & Process Optimization – Spearheaded automation projects, reducing manual effort from 4 hours to 45 minutes, 
+    enhancing efficiency.
 🤝 Cross-functional Collaboration – Working with AdTech, Product, and Research teams to deliver data-driven solutions.
-enhancing data-driven decision-making through SQL analytics, dashboarding, and statistical research across FMCG, Gaming, and Tech industries.
+    enhancing data-driven decision-making through SQL analytics, dashboarding, and statistical research across FMCG, Gaming, and 
+    Tech industries.
 
 I am passionate about leveraging data to tell compelling stories, optimize business strategies, and drive brand growth through data-backed decision-making.
    </pre>
@@ -184,48 +189,52 @@ I am passionate about leveraging data to tell compelling stories, optimize busin
     </h3>
     <h5 class="w3-padding-24 w3-text-light-grey">Disney+ Hotstar      
     </h5>
-    <h5 class="w3-padding-24 w3-text-light-grey">Brand Lift Coordinator </h5>
+    <h5 class="w3-padding-24 w3-text-light-grey">Brand Lift Studies Coordinator (Advertisement Strategies)</h5>
     <!-- <img src="/w3images/bandmember.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px"> -->
     <pre><span class="w3-large w3-margin-right">
-• Conducted meta-analyses on the effectiveness of NCCS and ICC T20 World Cup 2024 Campaign Impact, aligning with 
-objectives to understand campaign success rates. Leveraged learnings for client discussions and media coverage. 
-• Performed viewership analysis for marquee shows like "Koffee with Karan" and "Aarya", providing critical insights into 
-audience engagement and preferences. 
-• Contributed insights from meta-analyses and other research initiatives to inform strategic decisions and enhance 
-organizational effectiveness. 
-• Led coordination and execution of brand lift studies, evaluating marketing campaign impacts on consumer behavior and 
-brand perception. 
-• Led the automation of the BLS framework in collaboration with the AdTech, Product, and Operations teams, significantly 
-cutting down manual labor from 4 hours per study to just 45 minutes– saving 1 FTE. 
-• Ensured seamless execution of brand lift studies by managing timelines, coordinating stakeholders, and resolving technical 
-or operational challenges. 
-• Analyzed data from brand lift studies to produce comprehensive reports and presented findings and recommendations to 
-stakeholders. 
-• Collaborated cross-functionally with internal teams and external partners to deploy robust research methodologies.
+○ Acted as Analyst in market research to provide solutions and did market research using data analysis and various methodologies to help the brand 
+like (google, amazon etc) in understanding their market presence. 
+○ Conducted meta-analyses on the effectiveness of NCCS and ICC T20 World Cup 2024 Campaign Impact, aligning with objectives to understand 
+campaign success rates. Leveraged learnings for client discussions and media coverage. 
+○ Performed viewership analysis for marquee shows like "Koffee with Karan" and "Aarya", providing critical insights into audience engagement and 
+preferences. 
+○ Contributed insights from meta-analyses and other research initiatives to inform strategic decisions and enhance organizational effectiveness. 
+○ Led coordination and execution of brand lift studies, evaluating marketing campaign impacts on consumer behavior and brand perception. 
+○ Led the automation of the BLS framework in collaboration with the AdTech, Product, and Operations teams, significantly cutting down manual labor 
+from 4 hours per study to just 45 minutes– saving 1 FTE. 
+○ Ensured seamless execution of brand lift studies by managing timelines, coordinating stakeholders, and resolving technical or operational 
+challenges. 
+○ Analyzed data from brand lift studies ( From FMCG, F&B etc) to produce comprehensive reports and presented findings and recommendations to 
+stakeholders on CTV and Mobile users. 
+○ Collaborated cross-functionally with internal teams and external partners ( Such as Kantar )  to deploy robust research methodologies. 
+○ Developed Questionnaires & made case studies and user stories for Ads strategies with Data insights and analyses.  
+○ Did statistical and Quantitative analysis on GRP’s studies to assist the team in Ads strategies to get new clients in transition with the merger
 </span></pre>
     <h5 class="w3-padding-24 w3-text-light-grey">Ajath infotech Pvt Ltd       
     </h5>
-    <h5 class="w3-padding-24 w3-text-light-grey">PROJECT TRAINEE </h5>
+    <h5 class="w3-padding-24 w3-text-light-grey">Project Coordinator </h5>
     <!-- <img src="/w3images/bandmember.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px"> -->
     <pre><span class="w3-large w3-margin-right">
-• Analysed data using Excel, Power BI, and Python to identify anomalies and share insights. 
-• Developed and delivered small/medium-scale technology solutions aligned with business requirements. 
-• Utilized SQL, Python, and Power BI for data analysis and visualization. 
-• Crafted and delivered client proposals, proposing effective solutions. 
-• Collaborated with clients and internal project teams to drive project success. </span></pre>
+○ Analysed data using Excel, Power BI, and Python to identify anomalies and share insights  
+○ Developed and delivered small/medium-scale technology solutions aligned with business requirements  
+○ Delivered customized dashboards in Power BI leveraging data extracted through SQL queries; dashboards provided real-time insights that improved 
+project tracking and reduced reporting errors by 75%, enhancing overall team productivity.  
+○ Provided suggestions in writing user stories and Acceptance criteria for clients in FMCG & Gaming. 
+○ Crafted and delivered client proposals, proposing effective solutions. 
+○ Collaborated with clients and internal project teams to drive project success 
 
 <h5 class="w3-padding-24 w3-text-light-grey">Aakriti Intelligence                                                                                                                           
     </h5>
     <h5 class="w3-padding-24 w3-text-light-grey">Data Analyst trainee  </h5>
     <!-- <img src="/w3images/bandmember.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px"> -->
     <pre><span class="w3-large w3-margin-right">
-• Crafted and delivered client proposals, proposing effective solutions. 
-• Reviewed, analyzed, and provided feedback on projects. 
-• Created test plans, test schedules, and test strategies. 
-• Utilized various methods to analyze data, uncover hidden patterns, and optimize game performance. 
-• Worked with relational databases, including SQL queries, database definition, and schema design. 
-• Developed and implemented data quality control measures to ensure analytical validity. 
-• Established and built relationships to facilitate project success throughout the lifecycle. 
+○ Crafted and delivered client proposals, proposing effective solutions. 
+○ Reviewed, analysed, and provided feedback on projects. 
+○ Created test plans, test schedules, and test strategies. 
+○ Utilized various methods to project management and timeline management 
+○ Worked with relational databases, including SQL queries, database definition, and schema design. 
+○ Worked on proposal and in requirement gathering to present it to the potential client 
+○ Established and built relationships to facilitate project success throughout the lifecycle.  
 </span></pre>
     <!-- <p>John Doe saved us from a web disaster.</p><br> -->
 <!--     
@@ -362,8 +371,8 @@ stakeholders.
     <i class="fa fa-pinterest-p w3-hover-opacity"></i>
     <i class="fa fa-twitter w3-hover-opacity"></i> -->
    
-    <i class="fa fa-linkedin w3-hover-opacity"></i>
-    <i class="fa fa-github w3-hover-opacity"></i> 
+    <a href="https://www.linkedin.com/in/sumit-chauhan-796132256/" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+    <a href="https://github.com/12sumitchauhan/portfolio-projects" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
     <!-- <p class="w3-medium">Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">w3.css</a></p> -->
   <!-- End footer -->
   </footer>
