--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <h2 class="w3-text-light-grey">Sumit Chauhan</h2>
     <hr style="width:200px" class="w3-opacity">
     <pre> With 2+ years of experience in data analytics, market research, and brand strategy, I specialize in 
-          transforming raw data into actionable insights that drive business growth. Currently at Disney+ Hotstar, 
-          I analyze brand lift studies, advertising effectiveness, and audience behavior for top-tier brands like Google, 
-          Amazon, and FMCG leaders.
+transforming raw data into actionable insights that drive business growth. Currently at Disney+ Hotstar, 
+I analyze brand lift studies, advertising effectiveness, and audience behavior for top-tier brands like Google, 
+Amazon, and FMCG leaders.
 
 My expertise lies in:
 📊 Market Research & Campaign Analysis – Conducting in-depth studies to evaluate ad impact and optimize marketing strategies.
@@ -79,7 +79,8 @@ My expertise lies in:
     enhancing data-driven decision-making through SQL analytics, dashboarding, and statistical research across FMCG, Gaming, and 
     Tech industries.
 
-I am passionate about leveraging data to tell compelling stories, optimize business strategies, and drive brand growth through data-backed decision-making.
+I am passionate about leveraging data to tell compelling stories, optimize business strategies, and drive brand growth through data-backed 
+decision-making.
    </pre>
     <h3 class="w3-padding-16 w3-text-light-grey">My Skills</h3>
     <p class="w3-wide">Power BI:DAX, API, Power Query</p>
